# web_homework

./: .gitignore  Dockerfile.api.yaml  Dockerfile.httpd.yaml  Dockerfile.site.yaml  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  test.py  web_homework.dump.sql
api/: __main__.py
api/apps/admin/: router.py  views.py
api/apps/basket/: router.py  views.py
api/apps/catalog/: router.py  views.py
api/apps/users/: router.py  views.py
api/models/: product.py  roles.py  users.py
api/schemas/: admin_schemas.py  auth_schemas.py  base_schema.py  basket_schemas.py  catalog_schemas.py  product_schemas.py  users_schemas.py
api/utils/: app.py  auth.py  config_reader.py  database.py  exceptions.py  hashing.py  logger.py  mixins.py  mongo_utils.py  query_utils.py  redis_utils.py
api/utils/exceptions/: __init__.py  base.py  exc_400.py  exc_500.py
etc/: nginx.conf
httpd_conf/: site.conf
react-site/: package-lock.json  package.json
react-site/src/: App.js  index.css  index.js
react-site/src/components/: About.css  About.js  AdminPanel.css  AdminPanel.js  AuthState.js  Basket.js  BasketView.css  BasketView.js  Catalog.css  Catalog.js  DetailView.css  DetailView.js  Footer.css  Footer.js  Header.css  Header.js  Login.css  Login.js  Logout.js  Registration.css  Registration.js  Slider.css  Slider.js  main-container.css
scripts/: make_migration.sh
site/: about.html  catalog.html  index.html  login.html  registration.html
site/css/: catalog.css  main.css  registration.css
site/js/: app.js  main.js
(+13 files in other folders)
