[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["m-o-d-e-r <moder.mode.on@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
blinker = "1.7.0"
click = "8.1.7"
flask = "3.0.2"
flask-migrate = "4.0.7"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.3"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
mako = "1.3.2"
markupsafe = "2.1.5"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.28"
typing-extensions = "4.10.0"
werkzeug = "3.0.1"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
redis = {extras = ["hiredis"], version = "^5.0.3"}
pyjwt = "^2.8.0"
pydantic = "^2.6.4"
pymongo = "^4.6.3"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
